css/style.css
body{
    font-family: Arial, Helvetica, sans-serif;
    background-color: rgb(223, 231, 234);
    margin: 0;
}

header{
    background-color: white;
    height: 80px;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
    vertical-align: middle;
}

#logo{
width: 80px;
}

.logo-text{
    font-size: 50px;
    display: inline-block;
}

button{
    font-size: 15px;
    border-radius: 5px;
    height: 30px;
    border: 1px solid;
}

.color-blue{
    border-color:rgb(71, 173, 241);
    background-color: rgb(71, 173, 241);
    color: white;
}

.color-white{
    border-color:rgb(223, 231, 234);
    background-color:  white;
    color: rgb(223, 231, 234);
}

h3{
    font-size: 25px;
}

p{
    margin: 25px 0;
    font-size: 25px;
}

.icon-border{
    font-size: 10px;
    border: 1px solid;
    border-radius: 50%;
    padding: 4px 5px;
}

.color-green{
    border-color: green;
    color: green;
}

.color-red{
    border-color: red;
    color: red;
}

small{
    font-size: 12px;
    border-radius: 12px;
    padding: 7px 12px;
    border: 1px solid;
    color: white;
}

.small-blue{
    background-color:rgb(71, 173, 241) ;
    border-color: rgb(71, 173, 241);
}

.small-purple{
    background-color:rgb(156, 114, 228);
    border-color:rgb(156, 114, 228);
}

.small-dark-green{
    background-color: rgb(100, 192, 169);
    border-color: rgb(100, 192, 169);
}

.small-orange{
    background-color: rgb(242, 158, 51);
    border-color:rgb(242, 158, 51);
}

.small-pink{
    background-color:rgb(216, 99, 161) ;
    border-color: rgb(216, 99, 161);
}

.small-light-green{
    background-color:rgb(176, 201, 38) ;
    border-color: rgb(176, 201, 38) 
}

div{
    background-color: white;
    width: 1200px;
    margin: 0 auto;
    border-radius: 5px;
}

.button-conteiner{
    margin-top: 50px;
    margin-bottom: 0;
    padding: 15px 60px;
}

.section-conteiner{
    margin-top: 5px;
    padding: 35px 60px;
}

